# llvm-project

mlir/include/mlir/: InitAllDialects.h  InitAllPasses.h
mlir/include/mlir/Conversion/: Passes.h  Passes.td
mlir/include/mlir/Conversion/LuminousToLLVM/: LuminousToLLVM.h
mlir/include/mlir/Conversion/LuminousToStandard/: LuminousToStandard.h
mlir/include/mlir/Conversion/SCFToLuminous/: SCFToLuminousPass.h
mlir/include/mlir/Dialect/Linalg/: Passes.h  Passes.td
mlir/include/mlir/Dialect/Luminous/: Passes.h
mlir/lib/Conversion/: CMakeLists.txt
mlir/lib/Conversion/LinalgToLuminous/: CMakeLists.txt  LinalgToLuminous.cpp
mlir/lib/Conversion/LuminousToLLVM/: CMakeLists.txt  LuminousToLLVM.cpp
mlir/lib/Conversion/LuminousToStandard/: CMakeLists.txt  LuminousToStandard.cpp
mlir/lib/Conversion/SCFToLuminous/: CMakeLists.txt  SCFToLuminous.cpp  SCFToLuminousPass.cpp
mlir/lib/Dialect/Linalg/Analysis/: CMakeLists.txt  MemoryFootprintReductionAnalysis.cpp
mlir/lib/Dialect/Linalg/Transforms/: CMakeLists.txt  (+1 more)
mlir/test/Conversion/LinalgToLuminous/: linalg_launch.mlir
mlir/test/Conversion/LuminousToLLVM/: luminous-to-llvm.mlir
mlir/test/Conversion/LuminousToStandard/: luminous-to-std.mlir
mlir/test/Conversion/SCFToGPU/: parallel_loop.mlir
mlir/test/Conversion/SCFToLuminous/: parallel_loop.mlir
mlir/test/Dialect/Linalg/: reduce-memref-footprint.mlir
mlir/test/Dialect/Luminous/: invalid.mlir  kernel-outlining.mlir
mlir/test/mlir-opt/: commandline.mlir
mlir/tools/: CMakeLists.txt
mlir/tools/lmns-mlir-opt/: CMakeLists.txt  lmns-mlir-opt.cpp
(+8 files in other folders)
